updated based on Sarah's comments (2)

--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -4905,3 +4905,112 @@ Version Number: 1},
 	year = {2013},
 	pages = {121--146},
 }
+
+@article{lamb_braiding_2023,
+	title = {Braiding {Indigenous} rights and endangered species law},
+	volume = {380},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.science.org/doi/10.1126/science.adg9830},
+	doi = {10.1126/science.adg9830},
+	abstract = {Recovery targets fall short of culturally meaningful abundance
+          , 
+            
+              Endangered species laws effectively prevent species extinction but fall short in restoring abundance for culturally important species. Legal agreements between Indigenous peoples and countries recognize the importance of abundant, culturally important species that disproportionately contribute to peoples’ food, material, spirituality, and sense of place (
+              
+                1
+              
+              ). Despite this, recovery targets under endangered species laws do not account for such abundance, instead targeting minimum viable population (MVP) sizes that leave many species in a state of reduced abundance compared with their historical baselines. Using three keystone species in North America—caribou, bison, and salmon—we explore the implications of the gap between culturally meaningful abundance and minimum viable populations and argue for the need to establish recovery targets and processes that restore abundance beyond MVPs. Braiding endangered species law and Indigenous rights will help countries uphold the rights of Indigenous peoples, prevent species extinction, and ultimately provide benefits to society at large.},
+	language = {en},
+	number = {6646},
+	urldate = {2023-07-19},
+	journal = {Science},
+	author = {Lamb, Clayton T. and Willson, Roland and Menzies, Allyson K. and Owens-Beek, Naomi and Price, Michael and McNay, Scott and Otto, Sarah P. and Hessami, Mateen and Popp, Jesse N. and Hebblewhite, Mark and Ford, Adam T.},
+	month = may,
+	year = {2023},
+	pages = {694--696},
+}
+
+@misc{copernicus_climate_change_service_era5-land_2019,
+	title = {{ERA5}-{Land} hourly data from 2001 to present},
+	url = {https://cds.climate.copernicus.eu/doi/10.24381/cds.e2161bac},
+	doi = {10.24381/CDS.E2161BAC},
+	urldate = {2023-07-20},
+	publisher = {ECMWF},
+	author = {{Copernicus Climate Change Service}},
+	year = {2019},
+}
+
+@book{burnett_climatenar_2023,
+	title = {{climatenaR}: {Tools} to {Access} {ClimateNA} data},
+	author = {Burnett, Michael},
+	year = {2023},
+	annote = {R package version 1.0},
+}
+
+@article{melin_effect_2023,
+	title = {The effect of snow depth on movement rates of {GPS}-collared moose},
+	volume = {69},
+	issn = {1612-4642, 1439-0574},
+	url = {https://link.springer.com/10.1007/s10344-023-01650-w},
+	doi = {10.1007/s10344-023-01650-w},
+	abstract = {Abstract
+            During deep snow conditions, wildlife must balance between minimizing movements to conserve energy while seeking high amounts of browse to gain the energy. Knowledge of how snow begins to hinder their movements is therefore vital when predicting their wintertime behavior. We assessed the phenomenon with moose. Movement data from 122 GPS-collared moose were integrated with snow depth data from designated measurement stations. The effects of increasing snow depths on moose movement rates were then modeled with spline regression. The study was conducted in Finland, between 2009 and 2011. The moose were known for their sex and for the presence of calf at heel. On average, the movement rates decreased sharply until snow depths of ca. 30–40 cm, after which further significant decreases were not seen. The movement rates decreased from several kilometers per day to less than 500 m per day. Moose in the northernmost study area with the deepest snow covers moved as much as the moose in the other areas with less snow. Although we saw differences in the movement rates between males and females, differences between individuals were markedly higher than those caused by sex or a calf at heel. Moose are keystone species whose heavy browsing, especially during winter, can have profound effects on vegetation and forest regeneration. As snow covers in large parts of the boreal zone are predicted to decrease due to warming climate, the wintertime movements of moose and how they affect the local vegetation will remain relevant questions.},
+	language = {en},
+	number = {2},
+	urldate = {2023-07-20},
+	journal = {European Journal of Wildlife Research},
+	author = {Melin, M. and Matala, J. and Mehtätalo, L. and Pusenius, J. and Packalen, T.},
+	month = apr,
+	year = {2023},
+	pages = {21},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\7465D5AD\\Melin et al. - 2023 - The effect of snow depth on movement rates of GPS-.pdf:application/pdf},
+}
+
+@article{pedersen_quantifying_2021,
+	title = {Quantifying effects of snow depth on caribou winter range selection and movement in {Arctic} {Alaska}},
+	volume = {9},
+	issn = {2051-3933},
+	url = {https://movementecologyjournal.biomedcentral.com/articles/10.1186/s40462-021-00276-4},
+	doi = {10.1186/s40462-021-00276-4},
+	abstract = {Abstract
+            
+              Background
+              Caribou and reindeer across the Arctic spend more than two thirds of their lives moving in snow. Yet snow-specific mechanisms driving their winter ecology and potentially influencing herd health and movement patterns are not well known. Integrative research coupling snow and wildlife sciences using observations, models, and wildlife tracking technologies can help fill this knowledge void.
+            
+            
+              Methods
+              Here, we quantified the effects of snow depth on caribou winter range selection and movement. We used location data of Central Arctic Herd (CAH) caribou in Arctic Alaska collected from 2014 to 2020 and spatially distributed and temporally evolving snow depth data produced by SnowModel. These landscape-scale (90 m), daily snow depth data reproduced the observed spatial snow-depth variability across typical areal extents occupied by a wintering caribou during a 24-h period.
+            
+            
+              Results
+              We found that fall snow depths encountered by the herd north of the Brooks Range exerted a strong influence on selection of two distinct winter range locations. In winters with relatively shallow fall snow depth (2016/17, 2018/19, and 2019/20), the majority of the CAH wintered on the tundra north of the Brooks Range mountains. In contrast, during the winters with relatively deep fall snow depth (2014/15, 2015/16, and 2017/18), the majority of the CAH caribou wintered in the mountainous boreal forest south of the Brooks Range. Long-term (19 winters; 2001–2020) monitoring of CAH caribou winter distributions confirmed this relationship. Additionally, snow depth affected movement and selection differently within these two habitats: in the mountainous boreal forest, caribou avoided areas with deeper snow, but when on the tundra, snow depth did not trigger significant deep-snow avoidance. In both wintering habitats, CAH caribou selected areas with higher lichen abundance, and they moved significantly slower when encountering deeper snow.
+            
+            
+              Conclusions
+              In general, our findings indicate that regional-scale selection of winter range is influenced by snow depth at or prior to fall migration. During winter, daily decision-making within the winter range is driven largely by snow depth. This integrative approach of coupling snow and wildlife observations with snow-evolution and caribou-movement modeling to quantify the multi-facetted effects of snow on wildlife ecology is applicable to caribou and reindeer herds throughout the Arctic.},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-20},
+	journal = {Movement Ecology},
+	author = {Pedersen, Stine Højlund and Bentzen, Torsten W. and Reinking, Adele K. and Liston, Glen E. and Elder, Kelly and Lenart, Elizabeth A. and Prichard, Alexander K. and Welker, Jeffrey M.},
+	month = dec,
+	year = {2021},
+	pages = {48},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\J9ACP9HI\\Pedersen et al. - 2021 - Quantifying effects of snow depth on caribou winte.pdf:application/pdf},
+}
+
+@incollection{zuur_zero-truncated_2009,
+	address = {New York, NY},
+	title = {Zero-{Truncated} and {Zero}-{Inflated} {Models} for {Count} {Data}},
+	isbn = {978-0-387-87457-9 978-0-387-87458-6},
+	url = {http://link.springer.com/10.1007/978-0-387-87458-6_11},
+	urldate = {2023-07-27},
+	booktitle = {Mixed effects models and extensions in ecology with {R}},
+	publisher = {Springer New York},
+	author = {Zuur, Alain F. and Ieno, Elena N. and Walker, Neil J. and Saveliev, Anatoly A. and Smith, Graham M.},
+	collaborator = {Zuur, Alain F. and Ieno, Elena N. and Walker, Neil and Saveliev, Anatoly A. and Smith, Graham M.},
+	year = {2009},
+	doi = {10.1007/978-0-387-87458-6_11},
+	note = {Series Title: Statistics for Biology and Health},
+	pages = {261--293},
+}
