--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -134,7 +134,7 @@ H = C / R,
 
 \noindent where $H$ is the animal's **home-range size**, $C$ is the animal's resource consumption, and $R$ is the **resources** an animal can access. Harestad and Bunnel's model is simple to conceptualize and allows for testable predictions, but a species' spatial requirements likely depend on numerous other factors, such as competition, metabolic rate, diet, and body weight [@harvey_primate_1981; @lindstedt_home_1986; @reiss_scaling_1988; @harvey_primate_1981; @gittleman_carnivore_1982; @jetz_scaling_2004; @boratynski_energetic_2020; @noonan_effects_2020]. While many researchers have since demonstrated that animals adapt their home ranges in response to resources abundance, few studies build upon others' previous work. Instead, results are reported as independent, *de-novo* findings. Consequently, we currently lack a unifying framework for quantifying the effects of resource abundance on animals' spatial needs. In addition, while much work has been done on estimating animals' responses to average resource abundance, there is little to no information on how they respond to unpredictable changes in resources.
 
-In this paper, we refer to a location's average amount of resources as **resource abundance**, while use the phrase **resource stochasticity** to indicate the variability in resource abundance due to unpredictable causes. We argue that, on its own, a habitat's long-term resource abundance is not sufficient to assess the habitat's quality, nor make predictions about how much space an animal might use. For instance, a grassland with relatively low but constant forage availability will clearly require drastically different behaviors and adaptations from a desert location with equally scarce forage but rare, sudden, and strong pulses of resources. In the first scenario, an animal may require a large but constant home range as it moves between locations in search of food [*sensu* @teitelbaum_beyond_2019], while an animal in the second scenario may switch between dispersal as it searches for high-resource patches and short-term range residency until the local resources are depleted. Although it may be possible for both habitats to have the same long-term average resource abundance, the differences in resource unpredictability result in substantially different movement strategies and life histories being selected for. Although it is generally expected that resource unpredictability will decrease animals' fitness and a landscape's energetic balance [@chevin_adaptation_2010], there is little empirical evidence to support this hypothesis [but see: @herfindal_prey_2005; @nilsen_can_2005; @rizzuto_forage_2021].
+In this paper, we refer to a location's average amount of resources as **resource abundance**, while we use the phrase **resource stochasticity** to indicate the variability in resource abundance due to unpredictable causes. We argue that, on its own, a habitat's long-term resource abundance is not sufficient to assess the habitat's quality, nor make predictions about how much space an animal might use. For instance, a grassland with relatively low but constant forage availability will clearly require drastically different behaviors and adaptations from a desert location with equally scarce forage but rare, sudden, and strong pulses of resources. In the first scenario, an animal may require a large but constant home range as it moves between locations in search of food [*sensu* @teitelbaum_beyond_2019], while an animal in the second scenario may switch between dispersal as it searches for high-resource patches and short-term range residency until the local resources are depleted. Although it may be possible for both habitats to have the same long-term average resource abundance, the differences in resource unpredictability result in substantially different movement strategies and life histories being selected for. Although it is generally expected that resource unpredictability will decrease animals' fitness and a landscape's energetic balance [@chevin_adaptation_2010], there is little empirical evidence to support this hypothesis [but see: @herfindal_prey_2005; @nilsen_can_2005; @rizzuto_forage_2021].
 
 Here, we illustrate how animals' spatial needs depend on both the abundance and unpredictability of resources. First, we set the theoretical background necessary for the successive sections by introducing key concepts and notation. Next, we provide a review of the effects of resource *abundance* on animals' spatial needs while suggesting a unifying hypothesis. Afterwards, we provide a review of the effects of resource *stochasticity* on animals' spatial needs while suggesting a second unifying hypothesis. Subsequently, we demonstrate the power of these two hypotheses using quantitative, simulated responses to changes in resource abundance and unpredictability. Finally, we demonstrate how this framework can be used in practice to describe the movement ecology of a lowland tapir (*Tapirus terrestris*) from the Brazilian Cerrado [@medici_movement_2022]. Results from the simulations and empirical example are presented using a fully transparent approach that allows researchers to replicate the work and apply the methods to their own tracking data.
 
@@ -194,7 +194,7 @@ layout(1)
 
 \noindent While animals' needs vary greatly between taxonomic groups, some needs are essential for most species for survival and reproduction. All heterotrophic organisms require sources of chemical energy (i.e., food), water, and various limiting nutrients to survive, grow, and reproduce [@harvey_primate_1981; @baldwin_nutritional_1984; @reich_body_2001]. Failing to acquire sufficient resources can result in lower fitness, behavioral changes, physiological changes or damage, inability to reproduce, and death. Motile organisms can move to new locations in search of resources, but they must also account for a higher metabolism and movement costs [@taylor_energetics_1982]. The hypothesis that spatial needs decrease with resource abundance, $\e(R)$, is commonly accepted and well supported, but many studies assume a linear relationship [e.g., @harestad_home_1979; @relyea_home_2000; @rizzuto_forage_2021; @bista_effect_2022; @bradsworth_using_2022; @mcclintic_effects_2014]. This is problematic because a linear relationship can lead to questionable estimates and problematic biases, such as negative or excessively small home ranges [e.g., figure 2 in the work of @bista_effect_2022]. Conceptually, the relationship between spatial needs and $\e(R)$ must be nonlinear, since there are limits to how much space an animal is able to explore in its lifetime as well as the minimum amount of space it requires to survive [which is necessarily greater than zero -- see figure \@ref(fig:mu-hyp) as well as: @lucherini_habitat_1996; @herfindal_prey_2005; @nilsen_can_2005; @simcharoen_female_2014; @watson_ferruginous_2020; and contrast them to estimates based on linear models, e.g.: @relyea_home_2000; @rizzuto_forage_2021; @bista_effect_2022].
 
-When $\e(R)$ is high, we expect animals' spatial requirements be relatively small and near the smallest amount of space required to survive [e.g., @relyea_home_2000; @nilsen_can_2005; @herfindal_prey_2005]. However, as $\e(R)$ decreases, we expect animals' spatial requirements to increase nonlinearly, since low values of $\e(R)$ force animals to expand their home ranges [@lucherini_habitat_1996; @relyea_home_2000; @nilsen_can_2005; @herfindal_prey_2005; @bista_effect_2022], migrate to better locations [@samarra_movements_2017; @middleton_green-wave_2018; @geremia_migrating_2019], or move nomadically [@singh_migration_2012; @polansky_elucidating_2015; @teitelbaum_beyond_2019; @nandintsetseg_variability_2019]. It is unclear when animals switch from range residency to migration or nomadism (or vice-versa), but understanding the connection between these types of movement is important for quantifying the effect of resource abundance on animal's spatial needs and when an animal may choose to migrate or disperse rather than remaining range-resident [mammals: @teitelbaum_how_2015; moose, *Alces alces*: @singh_migration_2012; eagles, *Haliaeetus leucocephalus*: @wheat_migrate_2017; @poessel_interpreting_2022; lesser flamingos, *Phoeniconaias minor*: @pretorius_movement_2020]. Still, large-scale changes in movement behavior (such as species-wide shifts to dispersal, migration, or nomadism) are more likely to occur over evolutionary timescales than over an animal's lifespan. For instance, larger home ranges requires greater vagility, which, in turn, is facilitated by morphological features such as hinged joints and elongated limbs [@jetz_scaling_2004; @hirt_general_2017; @andersson_elbow-joint_2004; @samuels_postcranial_2013].
+When $\e(R)$ is high, we expect animals' spatial requirements to be relatively small and near the smallest amount of space required to survive [e.g., @relyea_home_2000; @nilsen_can_2005; @herfindal_prey_2005]. However, as $\e(R)$ decreases, we expect animals' spatial requirements to increase nonlinearly, since low values of $\e(R)$ force animals to expand their home ranges [@lucherini_habitat_1996; @relyea_home_2000; @nilsen_can_2005; @herfindal_prey_2005; @bista_effect_2022], migrate to better locations [@samarra_movements_2017; @middleton_green-wave_2018; @geremia_migrating_2019], or move nomadically [@singh_migration_2012; @polansky_elucidating_2015; @teitelbaum_beyond_2019; @nandintsetseg_variability_2019]. It is unclear when animals switch from range residency to migration or nomadism (or vice-versa), but understanding the connection between these types of movement is important for quantifying the effect of resource abundance on animal's spatial needs and when an animal may choose to migrate or disperse rather than remaining range-resident [mammals: @teitelbaum_how_2015; moose, *Alces alces*: @singh_migration_2012; eagles, *Haliaeetus leucocephalus*: @wheat_migrate_2017; @poessel_interpreting_2022; lesser flamingos, *Phoeniconaias minor*: @pretorius_movement_2020]. Still, large-scale changes in movement behavior (such as species-wide shifts to dispersal, migration, or nomadism) are more likely to occur over evolutionary timescales than over an animal's lifespan. For instance, larger home ranges requires greater vagility, which, in turn, is facilitated by morphological features such as hinged joints and elongated limbs [@jetz_scaling_2004; @hirt_general_2017; @andersson_elbow-joint_2004; @samuels_postcranial_2013].
 
 It is also worth noting that high $\e(R)$ does not does not necessarily imply that organisms have access to high amounts of resources, as predator avoidance and competition within an organism's habitat will decrease the proportion of $R$ it is able to access. Thus, organisms in habitats with strong competitive pressure and predation may require larger home ranges [@jetz_scaling_2004; @prox_framework_2020], but larger home ranges can be harder to defend and also result in higher rates of competition and movement costs [@grant_whether_1993; @jetz_scaling_2004; but also see @dickie_resource_2022]. Additionally, persistent territorial defense from competitors may prevent organisms from using space freely and as necessary [wolves, *Canis lupus*: @rich_anthropogenic_2012; feral cats, *Felis catus*: @bengsen_feral_2016; Capuchin monkeys, *Cebus capucinus*: @torrez-herrera_monkeys_2020], so the effect of $\e(R)$ on space use may vary between individuals, species, and locations. Still, these pressures simply alter the intensity with which organisms respond to $\e(R)$ but not the shape of the relationship, since each of these cases fall along different parts of the continuum in $\e(R)$ shown in figure \@ref(fig:mu-hyp).
 
@@ -208,7 +208,7 @@ This model is somewhat simplistic, but its simplicity makes it easy to fit and c
 
 # Effects of resource stochasticity, $\var(R)$
 
-\noindent Although the effect of $R$ on animals' spatial needs is often recognized and accounted for in ecology [@burt_territoriality_1943; @southwood_habitat_1977;  @lucherini_habitat_1996; @relyea_home_2000; @nilsen_can_2005; @williams-guillen_resource_2006; @rickbeil_plasticity_2019], most of the focus has been on the effects of $\e(R)$, while $\var(R)$ has received far less attention [but see @nilsen_can_2005; @di_stefano_resource_2011; @rizzuto_forage_2021; @seigle-ferrand_systematic_2021]. However, $\var(R)$ can fluctuate both spatially and temporally due to many important drivers, including repetitive and predictable patterns as well as more stochastic ones. For example, the abundance of berries is predictably scarce outside the growing season, while it is higher and unpredictable during spring and summer, since a bear may explore a location only after competitors ate all the berries or during a year of unusually low productivity. In contrast, other sources of stochasticity can be much less predictable, such as the arrival of new competitors [@alexander_novel_2015], the emergence of new diseases [@hollings_trophic_2014], droughts [@foley_severe_2008; @haig_assessment_2013], fires [@jolly_animal_2022], floods [@ramos_pereira_structure_2013], changes in climate and phenology [@berger_climate_2018; @grant_evolution_2017; @jonzen_rapid_2006; @inouye_climate_2000; @severson_spring_2021; @woolway_global_2020], and other extreme events [@logares_black_2012; @anderson_black-swan_2017].
+\noindent Although the effect of $R$ on animals' spatial needs is often recognized and accounted for in ecology [@burt_territoriality_1943; @southwood_habitat_1977;  @lucherini_habitat_1996; @relyea_home_2000; @nilsen_can_2005; @williams-guillen_resource_2006; @rickbeil_plasticity_2019], most of the focus has been on the effects of $\e(R)$, while $\var(R)$ has received far less attention [but see @nilsen_can_2005; @di_stefano_resource_2011; @rizzuto_forage_2021; @seigle-ferrand_systematic_2021]. However, $\var(R)$ can fluctuate both spatially and temporally due to many important drivers, including repetitive and predictable patterns as well as more stochastic ones. For example, since berries are scarce outside the growing season, the variance in berries will also be low. But during the growing season, both the average number of berries and the variance in berries are higher, since a bear may explore a location only after competitors ate all the berries. In contrast, other sources of stochasticity can be much less predictable, such as the arrival of new competitors [@alexander_novel_2015], the emergence of new diseases [@hollings_trophic_2014], droughts [@foley_severe_2008; @haig_assessment_2013], fires [@jolly_animal_2022], floods [@ramos_pereira_structure_2013], changes in climate and phenology [@berger_climate_2018; @grant_evolution_2017; @jonzen_rapid_2006; @inouye_climate_2000; @severson_spring_2021; @woolway_global_2020], and other extreme events [@logares_black_2012; @anderson_black-swan_2017].
 
 ```{r s2-hyp, fig.cap="Hypothesized spatial needs of an animal as a function of resource stochasticity ($\\var(R)$). We expect low values of $\\var(R)$ to result in low spatial needs as animals are able to depend on somewhat predictable resources. As $\\var(R)$ increases, spatial needs should increase nonlinearly, whether this results in an expansion of the home range (in the case of range-resident animals) or a switch to dispersal, nomadism, or migration. Note that the relationship between $\\var(R)$ and spatial needs cannot be linear because it would require spatial needs to be negative for low values of $\\var(R)$.", out.width = '0.5\\textwidth', fig.align = 'right', wrapfigure = list('R', 0.5)}
 knitr::include_graphics('../figures/variance-abundance-hr-hypotheses.png')
@@ -222,18 +222,13 @@ source('functions/qgamma2.R')
 plot(1:10, qgamma2(p = 0.5, mu = 1, sigma2 = 1:10))
 ```
 
-Similar to the effect of $\e(R)$, we expect $\var(R)$ to have a nonlinear effect on animals' spatial needs. When $\var(R)$ is low enough that $R$ is relatively predictable, we do not expect changes in $\var(R)$ to have a noticeable effect, but as resources become increasingly unpredictable, we expect spatial needs to increase progressively faster (figure \@ref(fig:s2-hyp)) because: (1) as $\var(R)$ increases the chances of finding low $R$ increase superlinearly, (2) stochastic environments tend to be less productive [@chevin_adaptation_2010], and (3) the added movement required to search for food increases animals' energetic requirements. If resources remain highly unpredictable over long periods of time (e.g., multiple lifespans), animals may evolve or develop new behaviors (such as nomadism, dispersal, and migration) or adaptations (such as increased fat storage or food caching). If changes in $\sigma^2(t)$ are sufficiently predictable, animals may learn to anticipate and prepare for periods of greater stochasticity by pre-emptively caching food or migrating, or relying on alternative food sources during stochastic events (e.g., after the arrival of competitors).
-
 ```{r multipanel-changing-var, fig.cap="Fictitious example of variation in resources in a heterogeneous environment with changing variance (even after accounting for changes in the mean). (a.) Although resource abundance ($R$, brown-green fill) varies over time and space, the variance (dot color) is lowest at the beginning and end of the observational period and highest when $\\e(R)$ peaks. (b.) Arbitrary definition of $R$ as following a Gamma distribution with time-varying mean $\\mu(t)$ and variance $\\sigma^2(t)$. The points in the central panel indicate the ralizations of $R$ in panel a.", out.width = '0.5\\textwidth', fig.align = 'right', wrapfigure = list('R', 0.5)}
 knitr::include_graphics('../figures/habitat-examples-changing-variance.png')
 ```
 
-Like the scenario illustrated in figure \@ref(fig:multipanel-constant-var), we can imagine an environment where both $\e(R)$ and $\var(R)$ change over time. We can then define $\var(R)$ as a function of time using the same notation as we did for $\e(R)$, i.e., $\var(R | t) = \sigma^2(t)$ (figure \@ref(fig:multipanel-changing-var)). When both $\e(R)$ and $\var(R)$ change over time, predicting $R$ becomes more complex. Statistically, this is because $\sigma^2(t)$ decreases as we allow $\mu(t)$ to change more over time and explain a greater proportion of $\var(R)$. Biologically, this is important because some animals may perceive changes in $R$ as a change in $\e(R)$, while others may perceive the change as a stochastic event. An animal's perception of changes in $R$ will depend strongly on the animal's cognitive capacities, including its memory and lifespan [@mueller_social_2013; @abrahms_memory_2019; @foley_severe_2008; @falcon-cortes_hierarchical_2021; @fagan_spatial_2013]. The ability to predict trends in $\mu(t)$ and $\sigma^2(t)$ requires animals have high cognitive capacity, since distinguishing between changes in $\e(R)$ and $\var (R)$ is not easy [@steixner-kumar_strategies_2020], especially if $\e(R)$ and $\var(R)$ are not independent, as in the case of $R \sim \Gamma(\mu(t), \sigma^2(t))$. Regardless of whether an organism is capable of predicting changes in $\sigma^2(t)$, the effect of $\var(R)$ is arguably as important as the effect of $\e(R)$ in determining how said organism will respond to changes in $R$ and consequently adapt its space use.
+Similar to the effect of $\e(R)$, we expect $\var(R)$ to have a nonlinear effect on animals' spatial needs. When $\var(R)$ is low enough that $R$ is relatively predictable, we do not expect changes in $\var(R)$ to have a noticeable effect, but as resources become increasingly unpredictable, we expect spatial needs to increase progressively faster (figure \@ref(fig:s2-hyp)) because: (1) as $\var(R)$ increases the chances of finding low $R$ increase superlinearly, (2) stochastic environments tend to be less productive [@chevin_adaptation_2010], and (3) the added movement required to search for food increases animals' energetic requirements. If resources remain highly unpredictable over long periods of time (e.g., multiple lifespans), animals may evolve or develop new behaviors (such as nomadism, dispersal, and migration) or adaptations (such as increased fat storage or food caching). If changes in $\sigma^2(t)$ are sufficiently predictable, animals may learn to anticipate and prepare for periods of greater stochasticity by pre-emptively caching food or migrating, or relying on alternative food sources during stochastic events (e.g., after the arrival of competitors).
 
-```{r stoch-timescale, eval = FALSE, fig.cap="Conceptualizations of perceptions of $\\e(R)$ (a.) and $\\var(R)$ (b.) over time for animals with no plasticity in their movement (blue), seasonal memory but no plasticity (orange), or high plasticity but no memory (green). The true trends in $\\e(R)$ and $\\var(R)$ are indicated in black in panels (a.) and (b.), respictively. Estimates in the white area indicate the animal's estimated $\\mu(t)$ and $\\sigma^2(t)$ based on past experience, while estimates to the grey shaded region indicate the animals' predictions of $\\mu(t)$ and $\\sigma^2(t)$ in the future. The four facets show how each behavior performs in environments where $\\e(R)$ is either predictable (top row) or stochastic (bottom row), and $\\var(R)$ is either predictable (left column) or stochastic (right column). Animals that do not adapt to changes in $R$ (blue) are unable to predict $\\e(R)$ accurately, and they have high estimates of $\\var(R)$ when $\\mu(t)$ is far from the long-term, temporally static average. Memory of seasonal trends in $\\mu(t)$ and $\\var(R)$ (orange) allows animals to perform well in predictable environments, but their lack of adaptability causes them to fair poorly in stochastic habitats, where they perceive $\\var(R)$ to be high when $\\e(R)$ is far from the expected $\\mu(t)$. Finally, the ability to adapt rapidly to change (green) allows animals to track changes in $\\e(R)$ and $\\var(R)$ closely, but the lack of memory prevents accurate predictions in predictable environments. Since such animals tend to perceive changes in $R$ as changes in $\\mu(t)$, they tend to have lower estimates of $\\sigma^2(t)$ than other animals."}
-# set eval to false: include in a separate paper?
-knitr::include_graphics('../figures/stochasticity-timescale.png')
-```
+Like the scenario illustrated in figure \@ref(fig:multipanel-constant-var), we can imagine an environment where both $\e(R)$ and $\var(R)$ change over time. We can then define $\var(R)$ as a function of time using the same notation as we did for $\e(R)$, i.e., $\var(R | t) = \sigma^2(t)$ (figure \@ref(fig:multipanel-changing-var)). When both $\e(R)$ and $\var(R)$ change over time, predicting $R$ becomes more complex. Statistically, this is because $\sigma^2(t)$ decreases as we allow $\mu(t)$ to change more over time and explain a greater proportion of $\var(R)$. Biologically, this is important because some animals may perceive changes in $R$ as a change in $\e(R)$, while others may perceive the change as a stochastic event. An animal's perception of changes in $R$ will depend strongly on the animal's cognitive capacities, including its memory and lifespan [@mueller_social_2013; @abrahms_memory_2019; @foley_severe_2008; @falcon-cortes_hierarchical_2021; @fagan_spatial_2013]. The ability to predict trends in $\mu(t)$ and $\sigma^2(t)$ requires animals have high cognitive capacity, since distinguishing between changes in $\e(R)$ and $\var (R)$ is not easy [@steixner-kumar_strategies_2020], especially if $\e(R)$ and $\var(R)$ are not independent, as in the case of $R \sim \Gamma(\mu(t), \sigma^2(t))$. Regardless of whether an organism is capable of predicting changes in $\sigma^2(t)$, the effect of $\var(R)$ is arguably as important as the effect of $\e(R)$ in determining how said organism will respond to changes in $R$ and consequently adapt its space use.
 
 # Interactive effects of $\e(R)$ and $\var(R)$
 
@@ -277,7 +272,7 @@ We start by providing examples and considerations on how one may model $R$, anim
 
 ### Modeling $R$
 
-\noindent Location-scale models [@stasinopoulos_generalized_2007; @rigby_generalized_2005] are a class of statistical models that allow us to estimate changes in a random variable's mean (i.e. its location) and variance (which depends on its scale) while allowing the mean-variance relationship to vary. `mgcv` [@wood_generalized_2017] is a commonly used package for `R` [@r_core_team_r_2022] that allows one to fit Generalized Linear Models [GLMs, see @zuur_mixed_2009] and Generalized Additive Models [GAMs, see @wood_generalized_2017], including hierarchical and location-scale GLMs and GAMs. Currently, the `mgcv` package allows one to fit location-scale models with a variety families of distributions, including Gaussian (i.e., normal), gamma, and Tweedie location-scale families (see the help on `?mgcv::family.mgcv` and `?mgcv::twlss` for more information).
+\noindent Location-scale models [@stasinopoulos_generalized_2007; @rigby_generalized_2005] are a class of statistical models that allow us to estimate changes in a random variable's mean (i.e. its location) and variance (which depends on its scale) while allowing the mean-variance relationship to vary. `mgcv` [@wood_generalized_2017] is a commonly used package for `R` [@r_core_team_r_2022] that allows one to fit Generalized Linear Models [GLMs, see @zuur_mixed_2009] and Generalized Additive Models [GAMs, see @wood_generalized_2017], including hierarchical and location-scale GLMs and GAMs. Currently, the `mgcv` package allows one to fit location-scale models with various families of distributions, including Gaussian (i.e., normal), gamma, and Tweedie location-scale families (see the help on `?mgcv::family.mgcv` and `?mgcv::twlss` for more information).
 
 The Gaussian location-scale family of distributions is very flexible, since the mean and variance parameters are assumed to be independent, and the response can be either positive or negative. However, the distribution's flexibility can also result in unreliable estimates for non-Gaussian responses, such as strictly positive data (e.g. available biomass), count data (e.g., number of prey), proportions (e.g., percentage of forested habitat), and bounded ratios [e.g., NDVI, see @pettorelli_normalized_2011].
 
@@ -394,7 +389,7 @@ with species names:
 Animals may adapt by adjusting the timing of reproduction [framework: @southwood_habitat_1977; red-backed fairywren, *Malurus melanocephalus*: @boersma_wildfire_2021] and torpor or hibernation [marmots, *Marmota flaviventris*: @inouye_climate_2000; ground squirrels, *Urocitellus brunneus*: @goldberg_hibernation_2021], storing large amounts of energy [@lindstedt_seasonality_1985] through fat storage [marmots: @armitage_energetics_2003; bears, *Ursus sp.*: @nespolo_why_2022] or resource caching [@post_caching_2006]. Alternatively, animals may alter their movement and travel long distances over short periods of time [@jetz_scaling_2004; @hirt_general_2017], whether this be for migration [@geremia_migrating_2019; @mueller_social_2013] or nomadism [@teitelbaum_how_2015; @teitelbaum_beyond_2019; @nandintsetseg_variability_2019]. Over the years, animals may also develop more complex cognitive abilities [@brown_toward_2004], including the development of memory of events [framework: @fagan_spatial_2013; @riotte-lambert_environmental_2020; @steixner-kumar_strategies_2020; bison and mule deer: @geremia_migrating_2019; blue whales, *Balaenoptera musculus*: @abrahms_memory_2019; caribou, *Rangifer tarandus*: @cavedon_genomic_2022; elephants: @foley_severe_2008; @polansky_elucidating_2015; elk, *Cervus canadensis*: @falcon-cortes_hierarchical_2021; @rickbeil_plasticity_2019; roe deer, *Capreolus capreolus*: @ranc_memory_2022], which is required for migration [whooping cranes, *Grus americana*: @mueller_social_2013; bison and mule deer: @geremia_migrating_2019; mule deer: @merkle_spatial_2019; blue whales: @abrahms_memory_2019; elk: @rickbeil_plasticity_2019; @middleton_green-wave_2018; but see: @cuadrado_assessing_2021; @stefanescu_timing_2021].-->
 However, adapting to changes in environmental cues rather than relying on memory alone [@severson_spring_2021; @rickbeil_plasticity_2019; @buntgen_elevational_2017; @jonzen_rapid_2006], can prevent animals from becoming trapped in sub-optimal conditions [@abrahms_memory_2019].
 
-In contrast, individuals with short lifespans are less likely to experience stochastic events and develop memory about them. However, the short generation time and high reproductive rate of r-selected species [as opposed to k-selected species, see @pianka_r-_1970; @brown_toward_2004] may promote other traits that increase survival following extreme events. Examples include higher population size, dispersal, higher genetic diversity, and complex group dynamics [e.g., @cuadrado_assessing_2021; @stefanescu_timing_2021]. Events that occur over large spatiotemporal scales can thus promote slow, large-scale changes through the adaptation, natural selection, and evolution of the species [@grant_evolution_2017; @logares_black_2012; @anderson_black-swan_2017; @gienapp_climate_2008], which is more likely to adapt if starting populations are large with high genetic diversity and short generations, as in the case of r-selected species [but see @leung_smaller_2022]. Of course, an animal with a lifespan shorter than a year will be unable to experience the cyclical nature of the seasons, and an animal with a lifespan of a few weeks or days may not even experience substantial changes in weather other than lower temperatures at night than during the day and some weather stochasticity. Still, a population may respond to spatiotemporal cycles in $\e(R)$ and $\var(R)$ by adapting the group's reproduction timing and migration [e.g., painted lady butterflies: @cuadrado_assessing_2021; @stefanescu_timing_2021].
+In contrast, individuals with short lifespans are less likely to experience stochastic events and develop memory about them. However, the short generation time and high reproductive rate of r-selected species [as opposed to k-selected species, see @pianka_r-_1970; @brown_toward_2004] may promote other traits that increase survival following extreme events. Examples include higher population size, dispersal, higher genetic diversity, and complex group dynamics [e.g., @cuadrado_assessing_2021; @stefanescu_timing_2021]. Events that occur over large spatiotemporal scales can thus promote slow, large-scale changes through the adaptation, natural selection, and evolution of the species [@grant_evolution_2017; @logares_black_2012; @anderson_black-swan_2017; @gienapp_climate_2008], which is more likely to adapt if starting populations are large with high genetic diversity and short generations, as in the case of r-selected species [but see @leung_smaller_2022]. Of course, an animal with a lifespan shorter than a year will be unable to experience the cyclical nature of the seasons, and an animal with a lifespan of a few weeks or days may not even experience substantial changes in weather other than daily cycles and some weather stochasticity. Still, a population may respond to spatiotemporal cycles in $\e(R)$ and $\var(R)$ by adapting the group's reproduction timing and migration [e.g., painted lady butterflies: @cuadrado_assessing_2021; @stefanescu_timing_2021].
 
 A population's fitness and chances of survival in a changing environment depend strongly on its adaptability and responsiveness to change [@riotte-lambert_environmental_2020], and its ability to recognize cues that precede extreme events or periods of scarcity or abundance can have appreciable effects on its members' chances of survival and reproduction. For example, ungulates' ability to time their yearly migrations on available forage biomass, snow fall, snow melt, and hunting pressure allow them to adapt to changes in both $\e(R)$ and $\var(R)$, while their spatial memory [@falcon-cortes_hierarchical_2021; @ranc_memory_2022] allows them to optimize their large-scale movement by reducing the amount of time and energy spent exploring. Similarly, the ability of trans-Saharan migrant birds to adapt their migration timing based on environmental cues allows them to account for differences in $\mu(t)$ between years [@jonzen_rapid_2006]. However, relying too strongly on short-term changes rather than depending on long-term memory can also cause animals to fail to find crucial resources during unpredictable times [whooping cranes: @mueller_social_2013; elephants: @polansky_elucidating_2015; @foley_severe_2008; whales: @abrahms_memory_2019]. Instead, if anomalies occur repeatedly over time, animals may adapt to a higher $\sigma^2(t)$ or shift their ranges altogether [terrestrial animals: @chen_rapid_2011; ungulates: @severson_spring_2021; @buntgen_elevational_2017], including migratory animals [@jonzen_rapid_2006]. Still, while range shifts can help species overcome changes in the long-term trends in $\mu(t)$ and $\sigma^2(t)$, including changes in phenology [@severson_spring_2021], they can also result in phenological mismatches [@lameris_arctic_2018] and add pressure to the species that already live in the habitat [e.g., @wallingford_adjusting_2020; but see @shepard_predators_2022], including specialists and obligate symbionts that may be unable to shift their range, since it is determined by their food sources' and associates' ability to move and adapt, too.
 
